...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/name_label"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_manual_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_label_manual_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/address_label"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_manual_address"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_label_manual_num_visits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/num_visits_label"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_manual_num_visits"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_manual_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
            android:id="@+id/tv_manual_num_visits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/btn_manual_add_visit"
            app:layout_constraintStart_toEndOf="@+id/tv_label_manual_num_visits"
            tools:text="0" />

        <Button
            android:id="@+id/btn_manual_add_visit"
            style="@style/PrimaryButtonStyle"
...
            android:layout_marginTop="24dp"
            android:text="@string/add_visit"
            app:layout_constraintStart_toEndOf="@+id/tv_manual_num_visits"
            app:layout_constraintTop_toBottomOf="@+id/et_manual_address" />

        <TextView
            android:id="@+id/tv_label_manual_last_visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/last_visit"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_manual_last_visit"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_manual_last_visit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_manual_last_visit" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/expanding_rv_manual_visits"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_manual_edit_visits"
            tools:layout_editor_absoluteX="0dp" />

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/notes_label"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_manual_notes"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_manual_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_label_manual_notes"
            app:layout_constraintTop_toBottomOf="@+id/expanding_rv_manual_visits" />

        <Button
            android:id="@+id/btn_manual_add_place"
            style="@style/PrimaryButtonStyle"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/add"
...
