...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/name_label"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_label_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/address_label"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_address"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_label_num_visits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/num_visits_label"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_num_visits"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
            android:layout_marginTop="16dp"
            android:text="@string/add_visit"
            app:layout_constraintStart_toEndOf="@+id/tv_num_visits"
            app:layout_constraintTop_toBottomOf="@+id/tv_attributions" />

        <TextView
            android:id="@+id/tv_label_last_visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/last_visit"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/tv_last_visit"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_last_visit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_label_last_visit"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_visit"
            tools:text="Tuesday, June 30, 2020 at 11:00 am" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/expanding_rv_visits"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_edit_visits"
            tools:layout_editor_absoluteX="0dp" />

...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:text="@string/notes_label"
            android:textSize="18sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/et_notes"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/et_notes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
...
