<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_add_manual"
        android:orderInCategory="100"
        android:title="@string/add_place_manually"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_refresh"
        android:title="@string/refresh"
        app:showAsAction="never"/>
    <item android:id="@+id/action_random_picker"
        android:title="@string/random_picker"
        app:showAsAction="never"/>
</menu>